[metadata]
name = example_jytan
version = 0.0.1
author = Junyong Tan
author_email = jtan9801@gmail.com
description = A package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jytan17/packaging_tutorial
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
